Create interface for test result